--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Telegram Web App</title>
 </head>
 <body>
-    <h1 style="text-align: center;">Добро пожаловать!</h1>
+    <h1 style="text-align: center;">Взаимодействие с ботом</h1>
     <div id="app"></div>
     <script src="script.js"></script>
 </body>
